[package]
name        = "ohos-drawing-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's drawing binding for rust"

[dependencies]
ohos-native-drawing-sys = { workspace = true }
ohos_enum_macro         = { workspace = true }

[lints]
workspace = true

[features]
default = []
api-13  = ["ohos-native-drawing-sys/api-13"]
api-14  = ["api-13", "ohos-native-drawing-sys/api-14"]
api-15  = ["api-14", "ohos-native-drawing-sys/api-15"]
api-16  = ["api-15", "ohos-native-drawing-sys/api-16"]
api-17  = ["api-16", "ohos-native-drawing-sys/api-17"]
api-18  = ["api-17", "ohos-native-drawing-sys/api-18"]
api-19  = ["api-18", "ohos-native-drawing-sys/api-19"]
api-20  = ["api-19", "ohos-native-drawing-sys/api-20"]
api-21  = ["api-20", "ohos-native-drawing-sys/api-21"]
api-22  = ["api-21", "ohos-native-drawing-sys/api-22"]
