[package]
name        = "ohos-hidebug-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's hidebug binding for rust"

[dependencies]
ohos-hidebug-sys = { workspace = true }
ohos-enum-derive = { workspace = true }

[features]
default = []
api-13  = ["ohos-hidebug-sys/api-13"]
api-14  = ["api-13", "ohos-hidebug-sys/api-14"]
api-15  = ["api-14", "ohos-hidebug-sys/api-15"]
api-16  = ["api-15", "ohos-hidebug-sys/api-16"]
api-17  = ["api-16", "ohos-hidebug-sys/api-17"]
api-18  = ["api-17", "ohos-hidebug-sys/api-18"]
api-19  = ["api-18", "ohos-hidebug-sys/api-19"]
api-20  = ["api-19", "ohos-hidebug-sys/api-20"]
api-21  = ["api-20", "ohos-hidebug-sys/api-21"]
api-22  = ["api-21", "ohos-hidebug-sys/api-22"]
api-23  = ["api-22", "ohos-hidebug-sys/api-23"]
api-24  = ["api-23", "ohos-hidebug-sys/api-24"]

[lints]
workspace = true
