[package]
name        = "ohos-hilog-binding"
version     = "0.0.4"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "hilog binding for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ohos-hilogs-sys = { workspace = true }
libc            = { workspace = true, optional = true }

[features]
default = []
# Allow redirect stdout/stderr to hilog. 
redirect = ["dep:libc"]
