[package]
name        = "ohos-hilog-binding"
version     = "0.1.2"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "hilog binding for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ohos-hilogs-sys = { workspace = true }
libc            = { workspace = true, optional = true }

log        = { version = "0.4", optional = true }
env_filter = { version = "0.1", default-features = false, optional = true }

[features]
default = []
# Allow redirect stdout/stderr to hilog. 
redirect = ["dep:libc"]

# Allow log
log   = ["dep:log", "dep:env_filter"]
regex = ["env_filter/regex"]
