[package]
name        = "ohos-hilog-binding"
version     = "0.1.2"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "hilog binding for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ohos-hilogs-sys = { workspace = true }
libc            = { workspace = true, optional = true }

log        = { version = "0.4", optional = true }
env_filter = { version = "0.1", default-features = false, optional = true }

[features]
default = []
# Allow redirect stdout/stderr to hilog. 
redirect = ["dep:libc"]

# Allow log
log   = ["dep:log", "dep:env_filter"]
regex = ["env_filter/regex"]

api-13 = ["ohos-hilogs-sys/api-13"]
api-14 = ["api-13", "ohos-hilogs-sys/api-14"]
api-15 = ["api-14", "ohos-hilogs-sys/api-15"]
api-16 = ["api-15", "ohos-hilogs-sys/api-16"]
api-17 = ["api-16", "ohos-hilogs-sys/api-17"]
api-18 = ["api-17", "ohos-hilogs-sys/api-18"]
api-19 = ["api-18", "ohos-hilogs-sys/api-19"]
api-20 = ["api-19", "ohos-hilogs-sys/api-20"]
