[package]
name        = "ohos-huks-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's HUKS (Universal Keystore) binding for rust"

[dependencies]
ohos-huks-sys    = { workspace = true }
ohos-enum-derive = { workspace = true }

[features]
default = []
api-13  = ["ohos-huks-sys/api-13"]
api-14  = ["api-13", "ohos-huks-sys/api-14"]
api-15  = ["api-14", "ohos-huks-sys/api-15"]
api-16  = ["api-15", "ohos-huks-sys/api-16"]
api-17  = ["api-16", "ohos-huks-sys/api-17"]
api-18  = ["api-17", "ohos-huks-sys/api-18"]
api-19  = ["api-18", "ohos-huks-sys/api-19"]
api-20  = ["api-19", "ohos-huks-sys/api-20"]
api-21  = ["api-20", "ohos-huks-sys/api-21"]
api-22  = ["api-21", "ohos-huks-sys/api-22"]
api-23  = ["api-22", "ohos-huks-sys/api-23"]

[lints]
workspace = true
