[package]
name        = "ohos-image-binding"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's image binding for rust"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-sys-ohos = "0.0.1"

[features]
default = []
api-13  = []
api-14  = ["api-13"]
api-15  = ["api-14"]
api-16  = ["api-15"]
api-17  = ["api-16"]
api-18  = ["api-17"]
api-19  = ["api-18"]
api-20  = ["api-19"]
