[package]
name        = "ohos-ime-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's input method binding for rust"

[lints]
workspace = true

[dependencies]
ohos-input-method-sys = { workspace = true }
ohos_enum_macro       = { workspace = true }
