[package]
name        = "ohos-ime-binding"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's input method binding for rust"

[lints]
workspace = true

[dependencies]
ohos-input-method-sys = { workspace = true }
ohos_enum_macro       = { workspace = true }

[features]
default = []
api-13  = ["ohos-input-method-sys/api-13"]
api-14  = ["api-13", "ohos-input-method-sys/api-14"]
api-15  = ["api-14", "ohos-input-method-sys/api-15"]
api-16  = ["api-15", "ohos-input-method-sys/api-16"]
api-17  = ["api-16", "ohos-input-method-sys/api-17"]
api-18  = ["api-17", "ohos-input-method-sys/api-18"]
api-19  = ["api-18", "ohos-input-method-sys/api-19"]
api-20  = ["api-19", "ohos-input-method-sys/api-20"]
