[package]
name        = "ohos-init-binding"
version     = "0.0.3"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's init binding for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
ohos-init-sys = { workspace = true }

[features]
default = []
api-13  = ["ohos-init-sys/api-13"]
api-14  = ["api-13", "ohos-init-sys/api-14"]
api-15  = ["api-14", "ohos-init-sys/api-15"]
api-16  = ["api-15", "ohos-init-sys/api-16"]
api-17  = ["api-16", "ohos-init-sys/api-17"]
api-18  = ["api-17", "ohos-init-sys/api-18"]
api-19  = ["api-18", "ohos-init-sys/api-19"]
api-20  = ["api-19", "ohos-init-sys/api-20"]
