[package]
name        = "ohos-input-binding"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's multi modal input binding for rust"

[lints]
workspace = true

[dependencies]
ohos-input-sys  = { workspace = true }
ohos_enum_macro = { workspace = true }
