[package]
name        = "ohos-input-binding"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "OpenHarmony's multi modal input binding for rust"

[lints]
workspace = true

[dependencies]
ohos-input-sys  = { workspace = true }
ohos_enum_macro = { workspace = true }

[features]
default = []
api-13  = ["ohos-input-sys/api-13"]
api-14  = ["api-13", "ohos-input-sys/api-14"]
api-15  = ["api-14", "ohos-input-sys/api-15"]
api-16  = ["api-15", "ohos-input-sys/api-16"]
api-17  = ["api-16", "ohos-input-sys/api-17"]
api-18  = ["api-17", "ohos-input-sys/api-18"]
api-19  = ["api-18", "ohos-input-sys/api-19"]
api-20  = ["api-19", "ohos-input-sys/api-20"]
